microservice/kube/tradebot-store/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tradebot-store-service
  name: tradebot-store-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tradebot-store-service
      version: v1
  #strategy: {}
  template:
    metadata:
      labels:
        version: v1
        app: tradebot-store-service
    spec:
      serviceAccountName: k8s-101-role

      # initContainers:
      # - name: secret-populator
      #   image: 108356037/kube-and-helm:ubuntu
      #   command: ["/bin/sh"]
      #   args: 
      #     - -c
      #     - kubectl get secret basic-auth --namespace=openfaas -oyaml | grep -v '^\s*namespace:\s' | kubectl create --namespace=default -f - || true

      containers:
      - image: localhost:5000/algotrade/tradebot-store-service
        name: tradebot-store-service
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tradebot-store-service
  name: tradebot-store-service-srv
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: tradebot-store-service
